added 'to top' button and modules menu

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
 
   <!-- Core Bootstrap -->
   <link href="./css/bootstrap.css" rel="stylesheet">
+  <link href="./css/totop.css" rel="stylesheet">
 
   <!-- Enable proper rendering on mobile -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,11 +27,11 @@
   {
     margin-top: 60px;
   }
-  article
+  /*article
   {
     padding-top: 60px;
     margin-top: -60px;
-  }
+  }*/
   </style>
 </head>
 
@@ -93,6 +94,7 @@
 <!-- Including scripts at bottom of page for faster loading -->
 <script src="./js/jquery.min.js"></script>
 <script src="./js/bootstrap.min.js"></script>
+<script src="./js/totop.js"></script>
 </body>
 
 </html>
