--- a/currentModel.html
+++ b/currentModel.html
@@ -7,6 +7,7 @@
 
   <!-- Core Bootstrap -->
   <link href="./css/bootstrap.css" rel="stylesheet">
+  <link href="./css/totop.css" rel="stylesheet">
 
   <!-- Enable proper rendering on mobile -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,11 +30,11 @@
   {
     margin-top: 60px;
   }
-  article
+  /*article
   {
     padding-top: 60px;
     margin-top: -60px;
-  }
+  }*/
   </style>
 </head>
 
@@ -108,6 +109,19 @@
   </ul> 
 </div> <!-- /col-md-3 -->
 
+<div class="container" style="text-align:center;">
+  <ul class="pagination" style="text-align:left;">
+	<li><a href="#">&laquo;</a></li>
+    <li><a href="modules.html">Modules</a></li>
+    <li><a href="goal.html">Goal Formation</a></li>
+    <li><a href="currentModel.html">Current Model Analysis</a></li>
+	<li><a href="dataCollection.html">Data Collection</a></li>
+	<li><a href="community.html">Community Involvement</a></li>
+	<li><a href="creating.html">Create Alternative Plan</a></li>
+	<li><a href="#">&raquo;</a></li>
+  </ul>
+</div>
+
 <!-- Main content section -->
 <div class="col-md-6">
  
@@ -141,9 +155,16 @@
 
 </div> <!-- /container -->
 
+<footer>
+
+<a href="#" class="go-top">Go Top</a>
+
+</footer>
+
 <!-- Including scripts at bottom of page for faster loading -->
 <script src="./js/jquery.min.js"></script>
 <script src="./js/bootstrap.min.js"></script>
+<script src="./js/totop.js"></script>
 </body>
 
 </html>
