--- a/modules.html
+++ b/modules.html
@@ -7,6 +7,7 @@
 
   <!-- Core Bootstrap -->
   <link href="./css/bootstrap.css" rel="stylesheet">
+  <link href="./css/totop.css" rel="stylesheet">
 
   <!-- Enable proper rendering on mobile -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,11 +30,11 @@
   {
     margin-top: 60px;
   }
-  article
+  /*article
   {
     padding-top: 60px;
     margin-top: -60px;
-  }
+  }*/
   </style>
 </head>
 
@@ -52,62 +53,48 @@
             <img src="images/distictly.png">
           </a>
         </div>
+		
         <div class="navbar-collapse collapse">
+		  <div class="col-md-10">
+		  <div class="row">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
+			<li><a href="modules.html">Modules</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
           </ul>
-        <!-- THIS SIGN ON FORM CAN BE ADDED LATER -->
-        <!-- <form class="navbar-form navbar-right">
-              <div class="form-group">
-                <input type="text" placeholder="Email" class="form-control">
-              </div>
-              <div class="form-group">
-                <input type="password" placeholder="Password" class="form-control">
-              </div>
-              <button type="submit" class="btn btn-success">Sign in</button>
-            </form> -->
+		  </div>
+		  <!--<div class="row">
+		  <ul class="nav navbar-nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+			<li><a href="modules.html">Modules</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+		  </div>-->
+		  </div>
         </div><!--/.navbar-collapse -->
       </div>
+	  
     </div>
 
 <!-- Sidebar navigation -->
-<div class="container">
-<div class="row">
-<div class="col-md-3">
-  <ul class="nav" id="module-navigation" data-spy="affix">
-    <li><a href=goal.html>Goal Formation and Clarification</a></li>
-    <li><a href="#current-model-analysis">Current Model Analysis</a></li>
-    <li>
-      <a href=dataCollection.html>Data Collection</a>
-      <ul class="nav nav-submenu">
-        <li><a href="#">Traffic</a></li>
-        <li><a href="#">Population</a></li>
-        <li><a href="#">Bus Routes</a></li>
-        <li><a href="#">Geographic Distance</a></li>
-        <li><a href="#">Neighborhood Boundaries</a></li>
-      </ul>
-    </li>
-    <li><a href="#community-involvment">Community Involvement</a></li>
-    <li><a href= creating.html>Creating the Redistricting Alternative</a></li>
-  </ul> 
-</div> <!-- /col-md-3 -->
+
+<div class="container" style="text-align:center;">
+  <ul class="pagination" style="text-align:left;">
+	<li><a href="#">&laquo;</a></li>
+    <li><a href="modules.html">Modules</a></li>
+    <li><a href="goal.html">Goal Formation</a></li>
+    <li><a href="currentModel.html">Current Model Analysis</a></li>
+	<li><a href="dataCollection.html">Data Collection</a></li>
+	<li><a href="community.html">Community Involvement</a></li>
+	<li><a href="creating.html">Create Alternative Plan</a></li>
+	<li><a href="#">&raquo;</a></li>
+  </ul>
+</div>
 
 <!-- Main content section -->
-<div class="col-md-9">
+<div class="col-md-6">
   <article id="overview">
     <h1>Redistricting Modules Portal</h1>
     <p class="lead">These steps are designed to guide you through the process of preparing an effective redistricting proposal for your school district. Use the navigation pane on the left to aceess details and resources for each step</p>
@@ -136,15 +123,17 @@
   </article>
   
 </div> <!-- /col-md-9" -->
-</div> <!-- /row -->
 
-<!-- Footer -->
+<footer>
 
-</div> <!-- /container -->
+<a href="#" class="go-top">Go Top</a>
+
+</footer>
 
 <!-- Including scripts at bottom of page for faster loading -->
 <script src="./js/jquery.min.js"></script>
 <script src="./js/bootstrap.min.js"></script>
+<script src="./js/totop.js"></script>
 </body>
 
 </html>
