changed nav bar

--- a/creating.html
+++ b/creating.html
@@ -109,16 +109,15 @@
   </ul> 
 </div> <!-- /col-md-3 -->
 
-<div class="container" style="text-align:center;">
-  <ul class="pagination" style="text-align:left;">
-	<li><a href="#">&laquo;</a></li>
-    <li><a href="modules.html">Modules</a></li>
+<div class="col-md-9">
+    <ul class="nav nav-pills nav-justified">
+
+
     <li><a href="goal.html">Goal Formation</a></li>
-    <li><a href="currentModel.html">Current Model Analysis</a></li>
-	<li><a href="dataCollection.html">Data Collection</a></li>
-	<li><a href="community.html">Community Involvement</a></li>
-	<li><a href="creating.html">Create Alternative Plan</a></li>
-	<li><a href="#">&raquo;</a></li>
+    <li ><a href="currentModel.html">Current Model Analysis</a></li>
+    <li><a href="community.html">Community Involvement</a></li>
+    <li><a href="dataCollection.html">Data Collection</a></li>
+    <li class="active"><a href="creating.html">Creating the Redistricting Model</a></li>
   </ul>
 </div>
 
@@ -126,7 +125,7 @@
 <div class="col-md-6">
  
   <article id="creating-the-redistricting-alternatives">
-    <h1>Creating the Redistricting Alternative</h1>
+    <h1>Creating the Redistricting Model</h1>
 
     <h3>Things to Know Before Starting</h3>
       <p>Before getting involved in the redistricting process, there are a few things you should know about the current proposal. These things include, but are not limited to:</p>
