--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h1>Rethink redistricting</h1>
         <p>School redistricting does not have to be a process done behind closed doors.
           Districtly provides you with all the tools you need to get involved with your community's school redistricting. </p>
-        <p><a class="btn btn-primary btn-lg" href="modules.html">Get Started &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="goal.html">Get Started &raquo;</a></p>
       </div>
     </div>
 
