--- a/community.html
+++ b/community.html
@@ -109,16 +109,15 @@
   </ul> 
 </div> <!-- /col-md-3 -->
 
-<div class="container" style="text-align:center;">
-  <ul class="pagination" style="text-align:left;">
-	<li><a href="#">&laquo;</a></li>
-    <li><a href="modules.html">Modules</a></li>
+<div class="col-md-9">
+    <ul class="nav nav-pills nav-justified">
+
+
     <li><a href="goal.html">Goal Formation</a></li>
-    <li><a href="currentModel.html">Current Model Analysis</a></li>
-	<li><a href="dataCollection.html">Data Collection</a></li>
-	<li><a href="community.html">Community Involvement</a></li>
-	<li><a href="creating.html">Create Alternative Plan</a></li>
-	<li><a href="#">&raquo;</a></li>
+    <li ><a href="currentModel.html">Current Model Analysis</a></li>
+    <li class="active"><a href="community.html">Community Involvement</a></li>
+    <li><a href="dataCollection.html">Data Collection</a></li>
+    <li><a href="creating.html">Creating the Redistricting Model</a></li>
   </ul>
 </div>
 
@@ -183,7 +182,8 @@
 
     </p>
 
-
+    <h3 align="right"><a href="dataCollection.html">Up Next: Data Collection</a></h3>
+    <br>
 
   </article>
 
