--- a/dataCollection.html
+++ b/dataCollection.html
@@ -108,16 +108,15 @@
 
 
 <!-- Main content section -->
-<div class="container" style="text-align:center;">
-  <ul class="pagination" style="text-align:left;">
-	<li><a href="#">&laquo;</a></li>
-    <li><a href="modules.html">Modules</a></li>
+<div class="col-md-9">
+    <ul class="nav nav-pills nav-justified">
+
+
     <li><a href="goal.html">Goal Formation</a></li>
-    <li><a href="currentModel.html">Current Model Analysis</a></li>
-	<li><a href="dataCollection.html">Data Collection</a></li>
-	<li><a href="community.html">Community Involvement</a></li>
-	<li><a href="creating.html">Create Alternative Plan</a></li>
-	<li><a href="#">&raquo;</a></li>
+    <li ><a href="currentModel.html">Current Model Analysis</a></li>
+    <li><a href="community.html">Community Involvement</a></li>
+    <li class="active"><a href="dataCollection.html">Data Collection</a></li>
+    <li><a href="creating.html">Creating the Redistricting Model</a></li>
   </ul>
 </div>
 
@@ -168,6 +167,9 @@
 		</ul>
 	  </p>
     </article>
+
+      <h3 align="right"><a href="creating.html">Up Next: Creating the Redistricting Alternative</a></h3>
+      <br>
 </div>
 
 <footer>
