--- a/about.html
+++ b/about.html
@@ -56,15 +56,10 @@
             <li><a href="about.html">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Forum<b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
+                <li><a href="http://muditg.com/c4g/phpBB3/ucp.php?mode=register">Sign Up</a></li>
+                <li><a href="http://muditg.com/c4g/phpBB3/ucp.php?mode=login">Sign In</a></li>
               </ul>
             </li>
           </ul>
