--- a/modules.html
+++ b/modules.html
@@ -62,6 +62,13 @@
             <li><a href="about.html">About</a></li>
 			<li><a href="modules.html">Modules</a></li>
             <li><a href="#contact">Contact</a></li>
+			<li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Forum<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="http://muditg.com/c4g/phpBB3/ucp.php?mode=register">Sign Up</a></li>
+                <li><a href="http://muditg.com/c4g/phpBB3/ucp.php?mode=login">Sign In</a></li>
+              </ul>
+            </li>
           </ul>
 		  </div>
 		  <!--<div class="row">
